# faster_web

./: Cargo.toml  README.md
client/src/: lib.rs
models/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
server/static/css/: index.css
server/templates/: .#index.org  base.html  history.html  index.html  index.org
