[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
askama = "0.12.1"
client = { path = "../client" }
log = "0.4.20"
models = { path = "../models" }
serde = { version = "1.0.193", features = ["serde_derive"] }
serde_json = "1.0.108"
simplelog = "0.12.1"




