[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.1"
askama = { version = "0.12.1", features = ["serde-json"] }
askama_actix = "0.14.0"
client = { path = "../client" }
log = "0.4.20"
models = { path = "../models" }
serde = { version = "1.0.193", features = ["serde_derive"] }
serde_json = "1.0.108"
simplelog = "0.12.1"




